<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/unbleached_silk"
    android:orientation="vertical"
    style="@style/Theme.TipCalculator"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:id="@+id/llInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/etBill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bill"
                    android:fontFamily="@font/biryani_bold"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:inputType="numberDecimal"
                    android:autofillHints="Bill" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvTip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/biryani_bold"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <SeekBar
                android:id="@+id/sbTip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:max="50"
                android:progress="15"
                android:thumb="@drawable/custom_seekbar_thumb"
                android:progressDrawable="@drawable/custom_seekbar_progress"/>

            <TextView
                android:id="@+id/tvSplit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/biryani_bold"
                android:text="@string/split_the_bill"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <LinearLayout
                android:id="@+id/llSplit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnMinus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_black"
                    android:gravity="center"
                    android:text="@string/minus"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:background="@drawable/custom_sign_buttons"/>

                <TextView
                    android:id="@+id/tvPersons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/persons_1"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/btnPlus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/plus"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    android:background="@drawable/custom_sign_buttons"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnCalculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/calculate_tip"
                android:textSize="28sp"
                android:textStyle="bold"
                android:background="@drawable/custom_submit_button"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="15dp"
        app:cardBackgroundColor="@color/alice_blue">

        <LinearLayout
            android:id="@+id/llOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTotalTip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/biryani_bold"
                android:text="@string/total_tip"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/biryani_bold"
                android:text="@string/total"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvTipPerPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/biryani_bold"
                android:text="@string/tip_per_person"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvTotalPerPerson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/biryani_bold"
                android:text="@string/total_per_person"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>